# SubEclipse

./: .gitignore  CMakeLists.txt  README.md
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  subeclipse
cmake/: Dependencies.cmake
configs/: default.json
docs/: ROI抓屏遮挡闪烁_研究与评审结论.md  VSCode_DEBUG一键编译运行_三轮评审.md  VSCode_Release一键编译运行_三轮评审.md  main函数降圈复杂度_三轮评审.md  simple_text_detector降圈复杂度_三轮评审.md  全屏Overlay改造_三轮评审.md  字幕遮挡器_需求与技术方案_含三轮评审.md  技术方案.md  技术方案_三轮评审记录.md  文本检测Debug增强_三轮评审.md  文本检测日志降噪优化_三轮评审.md  每周可执行清单.md  注释增强_三轮评审.md  注释补全_三轮评审_本轮.md  第1周代码三轮评审.md  第2周代码三轮评审.md  第3周代码三轮评审.md  第4周代码三轮评审.md  需求文档.md
include/subeclipse/: capture.h  config.h  detector.h  logger.h  overlay_window.h  pipeline.h  roi.h
src/: main.cpp
src/app/: config.cpp  logger.cpp  pipeline.cpp
src/platform/x11/: overlay_window.cpp  x11_capture.cpp
src/render/: roi.cpp
src/vision/: simple_text_detector.cpp
